--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -16,13 +16,6 @@
         <img src="./imagens/icon.png" alt="Logo">
     </a>
 </div>
-
-<ul class="nav-links">
-    <li id="link1" class="link"><a href="#">Sites</a></li>
-    <li id="link2" class="link"><a href="#">Matérias</a></li>
-    <li id="link3" class="link"><a href="#">Sobre</a></li>
-</ul>
-</nav>
 
 <header class="container">
     <div class="content">
@@ -41,34 +34,61 @@
     <p class="sub-header"></p>
     <div class="pricing">
         <div class="card">
-            <img src="./imagens/JOGO1.png" alt="jogo 1" class="plan-image">
+            <img src="./imagens/MagicMaster.jpeg" alt="jogo 1" class="plan-image">
             <div class="content"></div>
-            <button class="btn">Jogar</button>
+            <a href="https://dxn1xp.github.io/MagicMaster/" class="btn">Jogar<a>
         </div>
         <div class="card">
-            <img src="./imagens/JOGO2.png" alt="jogo 2" class="plan-image">
+            <img src="./imagens/Cronica de Guerra.jpeg" alt="jogo 3" class="plan-image">
             <div class="content"></div>
-            <button class="btn">Jogar</button>
-        </div>
-        <div class="card">
-            <img src="./imagens/JOGO3.png" alt="jogo 3" class="plan-image">
-            <div class="content"></div>
-            <button class="btn">Jogar</button>
+            <a href="https://www.exemplo.com" class="btn">Jogar<a>
         </div>
 </section>
 
 <section class="container">
-    <h2 class="header">Nossas Redes</h2>
+    <h2 class="header">Quem Somos?</h2>
+    <p>
+        Somos uma equipe cheia de ideias formada por alunos do curso técnico de Desenvolvimento de Sistemas. Criamos uma plataforma de game educacional com uma missão: deixar o aprendizado tão divertido e envolvente quanto seus jogos favoritos. O projeto nasceu ao observar dois desafios: a evasão escolar e como a tecnologia é parte do dia a dia dos jovens. Então pensamos: Por que não usar games para transformar a educação?
+    </p>
+
+    <h2 class="header">O Que Fazemos?</h2>
+    <p>
+        Desenvolvemos jogos educativos que unem diversão e conhecimento. Imagine explorar mundos incríveis enquanto aprende matemática, história, química, geografia, biologia e até programação em Python! Cada game é pensado para facilitar o entendimento dos conteúdos e ajudar você a brilhar nos estudos de um jeito inovador.
+    </p>
+</section>
+
+<section class="container">
+    <h2 class="header"></h2>
     <div class="features">
         <div class="card">
             <span><i class="ri-money-dollar-box-line"></i></span>
-            <h4>Youtube</h4>
-            <a href="https://www.youtube.com/@ChemlabOfc">Ver mais <i class="ri-arrow-right-line"></i></a>
+            <h2 class="header">Nosso Objetivo</h2>
+            <p>
+                Queremos que cada jogador descubra que aprender pode ser divertido. Mais do que estudar, você vai viver o conteúdo com desafios emocionantes, histórias imersivas e mundos interativos. Nosso objetivo é auxiliar no ensino e aprendizado, tornando as aulas mais legais e fáceis de entender.
+            </p>
+            <h2 class="header">Nossa Inspiração</h2>
+            <p>
+                Sabemos que o celular e os games são grandes aliados no dia a dia dos adolescentes. Por isso, usamos essas ferramentas para criar uma experiência interativa, onde aprender é tão emocionante quanto passar de fase no seu jogo favorito. Estamos conectando tecnologia, educação e diversão para transformar o jeito de aprender.
+            </p>
         </div>
         <div class="card">
             <span><i class="ri-bug-line"></i></span>
-            <h4>Instagram</h4>
-            <a href="https://www.youtube.com/@ChemlabOfc">Ver mais <i class="ri-arrow-right-line"></i></a>
+            <h2 class="header">O Que Vem Por Aí?</h2>
+    <p>
+        Estamos apenas começando! Além de explorar conteúdos escolares como matemática e biologia, estamos tornando o aprendizado ainda mais interativo. Nosso game vai incluir:
+    </p>
+    <ul>
+        <li>Quizzes desafiadores para testar seus conhecimentos de forma divertida.</li>
+        <li>Conteúdos explicativos, feitos para tirar suas dúvidas de maneira rápida e clara.</li>
+        <li>Vídeos animados, que trazem conceitos à vida, facilitando o entendimento.</li>
+        <li>Missões de programação, onde você aprenderá conceitos importantes de forma prática e divertida, resolvendo desafios e avançando na história do jogo.</li>
+    </ul>
+    <p>
+        Cada detalhe é pensado para unir diversão e conhecimento. Venha fazer parte dessa aventura e descobrir que aprender pode ser tão empolgante quanto zerar seu jogo favorito! 🚀🎮
+    </p>
         </div>
     </div>
 </section>
+</body>
+
+</html>
