--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
     <div class="pricing">
         <div class="card">
             <img src="./imagens/MagicMaster.jpeg" alt="jogo 1" class="plan-image">
-            <div class="content"></div>
+            <div class="content"></div>Magic Master
             <a href="https://dxn1xp.github.io/MagicMaster/" class="btn">Jogar<a>
         </div>
         <div class="card">
             <img src="./imagens/Cronica de Guerra.jpeg" alt="jogo 3" class="plan-image">
-            <div class="content"></div>
-            <a href="https://www.exemplo.com" class="btn">Jogar<a>
+            <div class="content"></div>Crônica De Guerra
+            <a href="https://github.com/Dxn1xp/CronicaDeGuerra" class="btn">Baixar<a>
         </div>
 </section>
 
