--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="card">
             <img src="./imagens/Cronica de Guerra.jpeg" alt="jogo 3" class="plan-image">
             <div class="content"></div>Crônica De Guerra
-            <a href="https://github.com/Dxn1xp/CronicaDeGuerraEXE" class="btn">Baixar<a>
+            <a href="https://explore-knowledge-of-wars.github.io/CdG/" class="btn">Visitar Plataforma<a>
         </div>
 </section>
 
